--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,6 +1,6 @@
-#moviedetailbg
+#housedetailbg
   .content
-#moviedetail
+#housedetail
   .content
     = link_to "X", "#", id: "detail-close"
     #detail-template
@@ -16,24 +16,24 @@
         Which of these nominees deserve to win Best Picture at the Oscars this year? Click on the Facebook log in button to vote for your favorites.
     #subtitle
       %p
-        Drag the movies around to make your selections.
+        Drag the houses around to make your selections.
     #selector
       %ol#selections
         %li#vote1
           .pedestal
           %h2 First Choice
           %p.instructions
-            drag your favorite movie into this box, 3 points
+            drag your favorite house into this box, 3 points
         %li#vote2
           .pedestal
           %h2 Second Choice
           %p.instructions
-            drag your second favorite movie into this box, 2 points
+            drag your second favorite house into this box, 2 points
         %li#vote3
           .pedestal
           %h2 Third Choice
           %p.instructions
-            drag your third favorite movie into this box, 1 point
+            drag your third favorite house into this box, 1 point
       #choices
         .clearer
     #nav
@@ -73,5 +73,5 @@
 
     #footer
       %p
-        This website has no affiliations with The Academy of Motion Picture Arts and Sciences or any other organization. It's just a fun way to see which movies a random sampling of people enjoyed the most this year. Votes on this site have no meaning and do not affect the outcome of the Academy Awards in any way. If you login with your Facebook account on this site we will save your name and your choices after you vote. Developed by
+        This website has no affiliations with The Academy of Motion Picture Arts and Sciences or any other organization. It's just a fun way to see which houses a random sampling of people enjoyed the most this year. Votes on this site have no meaning and do not affect the outcome of the Academy Awards in any way. If you login with your Facebook account on this site we will save your name and your choices after you vote. Developed by
         = link_to "Stephen Dettling", "http://sdettling.com", target: "_blank"
