houses controller had wrong name

--- a/app/assets/stylesheets/home.css.sass
+++ b/app/assets/stylesheets/home.css.sass
@@ -1,6 +1,6 @@
 .clearer
   clear: both
-#moviedetailbg
+#housedetailbg
   display: none
   position: absolute
   z-index: 999
@@ -11,7 +11,7 @@
     height: 900px
     width: 980px
     opacity: 0.7
-#moviedetail
+#housedetail
   display: none
   position: absolute
   z-index: 1000
@@ -103,7 +103,7 @@ h2
     width: 24px
     background: image_url("info.png")
 
-.movie
+.house
   padding: 10px
   cursor: move
 #mainContent
@@ -301,7 +301,7 @@ h2
         .pedestal
           float: left
           margin-right: 10px
-        .movie
+        .house
           position: absolute
           z-index: 10
           top: 0px
@@ -313,7 +313,7 @@ h2
             padding-top: 30px
     #choices
       margin: 0px 0px 0px 20px
-      .movie
+      .house
         width: 120px
         height: 217px
         background-color: #ddd
