--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,18 +3,9 @@
   %head
     %meta{content: "text/html;charset=UTF-8", "http-equiv" => "content-type"}
     = yield :metas
-    %title Cinema Celebration - The Academy's Best Pictures of 2011
+    %title House Voting 2012
     = stylesheet_link_tag "application"
     = javascript_include_tag "application"
-    :javascript
-      var _gaq = _gaq || [];
-       _gaq.push(['_setAccount', 'UA-28270060-1']);
-       _gaq.push(['_trackPageview']);
-       (function() {
-         var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-         ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-         var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-       })();
 
     %noscript
       .noscriptmsg
