--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -17,6 +17,7 @@
     #subtitle
       %p
         Drag the houses around to make your selections.
+    #save
     #selector
       %ol#selections
         %li#vote1
